--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
 # Site settings
-title: Monochrome | A minimal, responsive Jekyll blog theme
-description: "A minimal, responsive, ready to use blog template, built with Jekyll."
-url: "http://www.dyutibarma.github.io/monochrome"
+title: Blog - technology and science at TheReviewIndex
+description: "A blog for sharing thoughts on technology, science and insights at TheReviewIndex."
+url: "http://www.thereviewindex.github.io/blog"
+ogimage: "img/default-ogimage.png"
 author:
   name: "The Review Index"
-  email: "dyutibarma@gmail.com"
+  email: "root@thereviewindex.com"
   url: "https://thereviewindex.com"
 
+
 # Build settings
-baseurl: /monochrome # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: /blog # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
