--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Monochrome | A minimal, responsive Jekyll blog theme
+title: luanho | A minimal, responsive Jekyll blog theme
 description: "A minimal, responsive, ready to use blog template, built with Jekyll."
 url: "https://github.com/hothanhluan/hothanhluan.github.io"
 author:
